# cima

./: .clang-format  .gitignore  CMakeLists.txt  JOBS.md  LICENSE  PLAN.md  README.md  REVIEW.md  ROLES.md  hello.txt  llm-chat.sh
docker/: Dockerfile  cima.json.example  mcp-test.sh
go/: PHASE-1.md  PHASE-10.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md  PHASE-8.md  PHASE-9.md  PLAN.md  README.md  go.mod  go.sum  main.go  main_test.go
go/app/: app.go  app_test.go  chat_tab.go  chat_tab_test.go
go/chat/: conversation.go  conversation_test.go  session.go  session_test.go  types.go  types_test.go
go/client/: client.go  client_test.go  sse.go  sse_test.go
go/config/: config.go  config_test.go
go/plan/: planboard.go  planboard_test.go
go/renderer/: markdown.go  markdown_test.go
go/tools/: bash.go  file_io.go  filesystem.go  git.go  git_helpers.go  git_test.go  grep.go  path.go  path_test.go  plan_tools.go  plan_tools_test.go  registry.go  registry_test.go  tool.go  tool_impl_test.go  tool_test.go  web.go  web_helpers.go  web_test.go  worktree.go  worktree_test.go
llm-chat/: CMakeLists.txt  README.md
llm-chat/src/: chat.cpp  chat.h  client.cpp  client.h  config.cpp  config.h  main.cpp  tools.cpp  tools.h  types.cpp  types.h
llm-chat/tests/: mock_server.hpp  test_client.cpp  test_types.cpp
src/: agent.cpp  agent.h  app_session.cpp  app_session.h  assistant_data.cpp  assistant_data.h  chat.cpp  chat.h  client.cpp  client.h  config.cpp  config.h  conversation.cpp  conversation.h  group_channel.cpp  group_channel.h  gui_app.cpp  gui_app.h  gui_chat.cpp  gui_chat.h  gui_config.cpp  gui_config.h  gui_markdown.cpp  gui_markdown.h  gui_wiki.cpp  gui_wiki.h  inbox.cpp  inbox.h  jobs.cpp  jobs.h  main.cpp  notes.cpp  notes.h  plan.cpp  plan.h  renderer.cpp  renderer.h  session.cpp  session.h  session_data.cpp  (+15 more)
src/lsp/: json_rpc.cpp  json_rpc.h  lsp_client.cpp  lsp_client.h
src/mcp/: mcp_client.cpp  mcp_client.h  mcp_registry.cpp  mcp_registry.h
src/tools/: git_helpers.cpp  lua_engine.h  path.cpp  registry.cpp  spill.cpp  text_file_detector.cpp  text_file_detector.h  tool_factories.cpp  web_helpers.cpp  worktree.cpp
src/tools/factories/: ask_user.cpp  bash.cpp  bwrap.cpp  cmake.cpp  cmd_tool.cpp  continuation.cpp  exec.cpp  file_io.cpp  filesystem.cpp  git.cpp  grep.cpp  group_channel.cpp  inbox.cpp  lsp.cpp  lua.cpp  notes.cpp  session_db.cpp  skill.cpp  subagent.cpp  view_tool_output.cpp  web.cpp  wiki.cpp
tests/: mock_lsp_server.hpp  mock_mcp_server.hpp  mock_server.hpp  test_chat.cpp  test_client.cpp  test_config.cpp  test_conversation.cpp  test_group_channel.cpp  test_inbox.cpp  test_json_rpc.cpp  test_lsp.cpp  test_lsp_tools.cpp  test_mcp_client.cpp  test_mcp_registry.cpp  test_notes.cpp  test_renderer.cpp  test_session_db.cpp  test_skill.cpp  test_tools.cpp  test_types.cpp  test_wiki.cpp
